package com.company.structural.facade.car_parts;

public class Starter {
    public void start() {
        System.out.println("Starter started");
    }
}
